--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,7 @@
         "module": "ESNext",
         "moduleResolution": "Bundler",
         "target": "ES2022",
-        "jsx": "react",
+        "jsx": "react-jsx",
         "allowImportingTsExtensions": true,
         "strict": true,
         "strictNullChecks": true,
@@ -12,7 +12,6 @@
         "strictPropertyInitialization": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "emitDeclarationOnly": true,
         "alwaysStrict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
@@ -34,10 +33,11 @@
             "@/*": ["src/*"]
         },
         "typeRoots": ["./node_modules/@types", "./types"],
-        "types": ["node", "jest"],
+        "types": ["node", "jest", "react", "react-dom"],
         "allowJs": true,
         "checkJs": true,
         "noEmit": false,
+        "emitDeclarationOnly": true,
         "incremental": true,
         "composite": true,
         "declaration": true,
@@ -71,7 +71,8 @@
         "noLib": false,
         "noResolve": false,
         "preserveSymlinks": true,
-        "traceResolution": true
+        "traceResolution": true,
+        "tsBuildInfoFile": "./.tsbuildinfo"
     },
     "exclude": [
         "node_modules",
@@ -82,12 +83,5 @@
     "include": [
         "./src/**/*",
         "./tests/**/*"
-    ],
-    "files": [
-        "src/index.tsx",
-        "./src/global.d.ts"
-    ],
-    "references": [
-        { "path": "./tsconfig.base.json" }
     ]
 }
