--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "blueberryproject",
   "version": "1.0.0",
   "description": "Blueberry Platformer Project",
+  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
