--- a/levels.jsonc
+++ b/levels.jsonc
@@ -1,26 +1,55 @@
 [
     [
-        { "texture": "grass", "x": 0, "y": 550, "width": 800, "height": 200 }, // Ground platform
+        { "texture": "grass", "x": 0, "y": 550, "width": 800, "height": 200 }, // Ground platform for level 1
         { "texture": "grass", "x": 400, "y": 450, "width": 200, "height": 20 },
         { "texture": "grass", "x": 100, "y": 300, "width": 250, "height": 20 },
         { "texture": "grass", "x": 300, "y": 100, "width": 300, "height": 20 }
     ],
     [
-        { "texture": "grass", "x": 0, "y": 580, "width": 800, "height": 200 }, // Ground platform
-
-        // New tighter platforms
+        { "texture": "grass", "x": 0, "y": 580, "width": 800, "height": 200 }, // Ground platform for level 2
         { "texture": "grass", "x": 100, "y": 500, "width": 150, "height": 20 },
         { "texture": "grass", "x": 350, "y": 400, "width": 150, "height": 20 },
         { "texture": "grass", "x": 600, "y": 300, "width": 200, "height": 20 },
-        // Higher platforms with more jumps required
         { "texture": "grass", "x": 200, "y": 200, "width": 250, "height": 20 },
         { "texture": "grass", "x": 500, "y": 80, "width": 150, "height": 20 },
-        // Platforms with gaps in between that require jumping across
         { "texture": "grass", "x": 400, "y": 500, "width": 150, "height": 20 },
         { "texture": "grass", "x": 50, "y": 255, "width": 150, "height": 20 },
-
-        // More challenging vertical platforming
         { "texture": "grass", "x": 250, "y": 200, "width": 100, "height": 20 },
         { "texture": "grass", "x": 300, "y": 50, "width": 100, "height": 20 }
+    ],
+    [
+        // NEW HUGE LEVEL - Minimum 30 platforms; ground at y=550 and no platform is below y=550.
+        // Platforms are arranged so that the ground (platform 1) is at y=550, and subsequent platforms are placed above it.
+        // Here, we use a formula: for i from 1 to 30, each platform's y = 550 – (i-1)*140 and x = (i-1)*300.
+        { "texture": "grass", "x": 0,    "y": 550,   "width": 5000, "height": 200 }, // Platform 1: Ground platform
+        { "texture": "grass", "x": 300,  "y": 410,   "width": 300,  "height": 20  }, // Platform 2
+        { "texture": "grass", "x": 600,  "y": 270,   "width": 300,  "height": 20  }, // Platform 3
+        { "texture": "grass", "x": 900,  "y": 130,   "width": 300,  "height": 20  }, // Platform 4
+        { "texture": "grass", "x": 1200, "y": -10,   "width": 300,  "height": 20  }, // Platform 5
+        { "texture": "grass", "x": 1500, "y": -150,  "width": 300,  "height": 20  }, // Platform 6
+        { "texture": "grass", "x": 1800, "y": -290,  "width": 300,  "height": 20  }, // Platform 7
+        { "texture": "grass", "x": 2100, "y": -430,  "width": 300,  "height": 20  }, // Platform 8
+        { "texture": "grass", "x": 2400, "y": -570,  "width": 300,  "height": 20  }, // Platform 9
+        { "texture": "grass", "x": 2700, "y": -710,  "width": 300,  "height": 20  }, // Platform 10
+        { "texture": "grass", "x": 3000, "y": -850,  "width": 300,  "height": 20  }, // Platform 11
+        { "texture": "grass", "x": 3300, "y": -990,  "width": 300,  "height": 20  }, // Platform 12
+        { "texture": "grass", "x": 3600, "y": -1130, "width": 300,  "height": 20  }, // Platform 13
+        { "texture": "grass", "x": 3900, "y": -1270, "width": 300,  "height": 20  }, // Platform 14
+        { "texture": "grass", "x": 4200, "y": -1410, "width": 300,  "height": 20  }, // Platform 15
+        { "texture": "grass", "x": 4500, "y": -1550, "width": 300,  "height": 20  }, // Platform 16
+        { "texture": "grass", "x": 4800, "y": -1690, "width": 300,  "height": 20  }, // Platform 17
+        { "texture": "grass", "x": 5100, "y": -1830, "width": 300,  "height": 20  }, // Platform 18
+        { "texture": "grass", "x": 5400, "y": -1970, "width": 300,  "height": 20  }, // Platform 19
+        { "texture": "grass", "x": 5700, "y": -2110, "width": 300,  "height": 20  }, // Platform 20
+        { "texture": "grass", "x": 6000, "y": -2250, "width": 300,  "height": 20  }, // Platform 21
+        { "texture": "grass", "x": 6300, "y": -2390, "width": 300,  "height": 20  }, // Platform 22
+        { "texture": "grass", "x": 6600, "y": -2530, "width": 300,  "height": 20  }, // Platform 23
+        { "texture": "grass", "x": 6900, "y": -2670, "width": 300,  "height": 20  }, // Platform 24
+        { "texture": "grass", "x": 7200, "y": -2810, "width": 300,  "height": 20  }, // Platform 25
+        { "texture": "grass", "x": 7500, "y": -2950, "width": 300,  "height": 20  }, // Platform 26
+        { "texture": "grass", "x": 7800, "y": -3090, "width": 300,  "height": 20  }, // Platform 27
+        { "texture": "grass", "x": 8100, "y": -3230, "width": 300,  "height": 20  }, // Platform 28
+        { "texture": "grass", "x": 8400, "y": -3370, "width": 300,  "height": 20  }, // Platform 29
+        { "texture": "grass", "x": 8700, "y": -3510, "width": 300,  "height": 20  }  // Platform 30
     ]
 ]
