--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
 # Auto detect text files and perform LF normalization
-# Auto detect text files and perform LF normalization
-* text=auto
+* text eol=crlf
 
 # Set default behavior for certain file types
 *.c     text
@@ -16,6 +15,7 @@
 *.json  text
 *.xml   text
 *.md    text
+.gitignore text eol=crlf
 
 # Handle binary files
 *.png   binary
