--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Auto detect text files and perform LF normalization
-* text eol=crlf
+* text eol=Auto
 
 # Set default behavior for certain file types
 *.c     text
@@ -16,6 +16,13 @@
 *.xml   text
 *.md    text
 .gitignore text eol=crlf
+*.yml   text
+*.yaml  text
+*.sh    text eol=lf
+*.command text eol=lf
+*.bat   text eol=crlf
+*.ps1   text eol=crlf
+*.sql   text
 
 # Handle binary files
 *.png   binary
