--- a/levels.jsonc
+++ b/levels.jsonc
@@ -1,4 +1,46 @@
+/*function generatePlatforms(count = 30, startX = 300, startY = 550, stepMin = 20, stepMax = 50, yStep = 140) {
+    const platforms = [];
+
+let currentX = startX;
+let currentY = startY;
+
+for (let i = 0; i < count; i++) {
+    const direction = Math.random() < 0.5 ? -1 : 1;
+
+    // Random horizontal step
+    const xOffset = Math.floor(Math.random() * (stepMax - stepMin + 1)) + stepMin;
+    currentX += direction * xOffset;
+
+    // Vertical offset (going upward)
+    currentY -= yStep;
+
+    platforms.push({
+        texture: "grass",
+        x: currentX,
+        y: currentY,
+        width: 300,
+        height: 20
+    });
+}
+
+// Add the ground platform at bottom
+platforms.unshift({
+    texture: "grass",
+    x: 0,
+    y: startY,
+    width: 500000,
+    height: 200
+});
+
+return platforms;
+}
+
+const level3 = generatePlatforms(40); // Boom Bralen, I just took some coding help from gpt but it should work but you double check it.
+console.log(level3);
+*/
+
 [
+   
     [
         { "texture": "grass", "x": 0, "y": 550, "width": 800, "height": 200 }, // Ground platform for level 1
         { "texture": "grass", "x": 400, "y": 450, "width": 200, "height": 20 },
@@ -17,6 +59,7 @@
         { "texture": "grass", "x": 250, "y": 200, "width": 100, "height": 20 },
         { "texture": "grass", "x": 300, "y": 50, "width": 100, "height": 20 }
     ],
+    [ 
     [
         // NEW HUGE LEVEL - Minimum 30 platforms; ground at y=550 and no platform is below y=550.
         // Platforms are arranged so that the ground (platform 1) is at y=550, and subsequent platforms are placed above it.
@@ -51,5 +94,11 @@
         { "texture": "grass", "x": 8100, "y": -3230, "width": 300,  "height": 20  }, // Platform 28
         { "texture": "grass", "x": 8400, "y": -3370, "width": 300,  "height": 20  }, // Platform 29
         { "texture": "grass", "x": 8700, "y": -3510, "width": 300,  "height": 20  }  // Platform 30
-    ]
+    // Cus this is so big (i more of an idea guy) I'll try the random command
+    //I need help but I trying to make it so each level is randomly spawned and not all going in the same direction because then it gets boring so yes @babafun help
+]
+   
+   
+ 
+]
 ]
